--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -54,6 +54,13 @@ spring:
                 redis-rate-limiter.replenishRate: 1
                 redis-rate-limiter.burstCapacity: 1
 
+okta:
+  oauth2:
+    issuer: https://dev-kxjt0wcpmhjbhqvx.us.auth0.com/
+    client-id:
+    client-secret: 
+    scope: openid, profile, email, offline_access, internal
+
 
 # Zipkin configuration
 management:
